tests/vertical-slice/accept/vec_index_assign_oob_traps.hew
fn main() -> i64 {
    var v: Vec<i64> = Vec::new();
    v.push(1);
    v[1] = 99;
    return 0;
}
