tests/vertical-slice/reject/gen_capture_whole_value_tuple.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let _g = gen {
        let _tuple = (items, 1);
        yield 0;
    };
}
